# market-service

./: .gitignore
client/: client  define.py  main_cli.py  pyproject.toml
client/cli/: front.py
server/: .gitignore  datadef.json  load_tokens.py  main.py  market-server  pyproject.toml
server/backend/: errors.py  routers.py
server/data/: data.jsonl
server/database/: db.py  dbdefine.py  jsonl_manager.py  postgre_manager.py  redis_manager.py
server/secrets/: tokens.txt
