[project]
name = "market-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "arthuras.work@gmail.com"}
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "questionary (>=2.1.1,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
