[project]
name = "marker-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "arthuras.work@gmail.com"}
]
requires-python = ">=3.12 <4.0"
dependencies = [
    "redis (>=8.0.0,<9.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
